starting details for objects

--- a/app/src/main/res/layout/activity_object_details.xml
+++ b/app/src/main/res/layout/activity_object_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ObjectDetails">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,9 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/content_main2" />
+    <include layout="@layout/content_object_details" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -31,14 +29,5 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
-
-    <Button
-        android:id="@+id/cam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CAMERA"
-        android:textAppearance="@android:style/TextAppearance.Widget.Button"
-        app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="bottom|center" />
 
 </android.support.design.widget.CoordinatorLayout>
