--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,20 +9,12 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
+        android:theme="@style/AppTheme.AppBarOverlay"/>
 
     <include
-        android:id="@+id/include"
-        layout="@layout/content_main2" />
+        android:id="@+id/include2"
+        layout="@layout/content_main2"
+        />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -33,12 +25,20 @@
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
     <Button
-        android:id="@+id/cam"
+        android:id="@+id/button"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CAMERA"
-        android:textAppearance="@android:style/TextAppearance.Widget.Button"
-        app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="bottom|center" />
+        android:onClick="scanbarcode"
+        android:text="string scan"
+        android:visibility="visible" />
+
+    <Button
+        android:id="@+id/objectDetails"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="object details"
+        app:layout_anchor="@+id/include2"
+        app:layout_anchorGravity="left|center" />
 
 </android.support.design.widget.CoordinatorLayout>
