--- a/app/src/main/res/layout/get_barcode.xml
+++ b/app/src/main/res/layout/get_barcode.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,6 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:layout_alignTop="@+id/null"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
@@ -22,12 +23,11 @@
 
     <include layout="@layout/content_getbarcode" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+    <SurfaceView
+        android:id="@+id/surfaceView"
+        android:layout_width="346dp"
+        android:layout_height="388dp"
+        android:translationX="35dp"
+        android:translationY="100dp" />
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
